02-orquestacion/exercises/solutions/02-distributed/01-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api
spec:
  selector:
    matchLabels:
      app: todo
      service: api
  replicas: 1
  template:
    metadata:
      labels:
        app: todo
        service: api
    spec:
      containers:
      - name: todo-api
        image: antonio/lc-todo-api:v1
        imagePullPolicy: Never
        resources:
          limits:
            memory: 200Mi
            cpu: 100m
        ports:
        - containerPort: 3000
