02-orquestacion/exercises/solutions/02-distributed/03-front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-front
spec:
  selector:
    matchLabels:
      app: todo
      service: front
  replicas: 1
  template:
    metadata:
      labels:
        app: todo
        service: front
    spec:
      containers:
      - name: todo-front
        image: antonio/lc-todo-front:v1
        imagePullPolicy: Never
        resources:
          requests:
            memory: 50Mi
            cpu: 50m
          limits:
            memory: 100Mi
            cpu: 100m
        ports:
        - containerPort: 80
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: todo
                    service: front
                topologyKey: kubernetes.io/hostname
              weight: 100
