02-orquestacion/exercises/solutions/02-distributed/02-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api
spec:
  selector:
    app: todo-api
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
