02-orquestacion/exercises/solutions/02-distributed/04-front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-front
spec:
  selector:
    app: todo-front
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
