02-orquestacion/exercises/solutions/02-distributed/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo
  labels:
    name: todo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "todosticky"
    nginx.ingress.kubernetes.io/session-cookie-expires: "604800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "604800"
spec:
  rules:
  - host: todo.lc
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todo-front
            port: 
              number: 80
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: todo-api
            port: 
              number: 3000
